<resources>
    <string name="app_name">Real Estate Manager</string>

    <string name="animation_second_fragment_to_viewpager" translatable="false">AnimationSecondToViewpager</string>

    <!-- SEARCH APARTMENT -->
    <string name="map_text_no_connection">You must be connected</string>
    <string name="map_reload_btn_text">RELOAD</string>

    <!-- SEARCH APARTMENT -->
    <string name="search_apartment_fragment_title">Search Apartment</string>
    <string name="search_apartment_date_to">to</string>
    <string name="search_apartment_load_button">LOAD</string>
    <string name="search_apartment_number_of_picture">Number of picture (max) :</string>
    <string name="search_apartment_tolerances_inverse_warning">tolerance inf always smaller than tolerance sup</string>

    <!-- ABOUT -->
    <string name="about_message" translatable="false">REAL ESTATE MANAGER : v 1.0.0\nbuilt : 2019/02/01\nPowered with Android Studio for :\nAndroid 4.4 and higher\n\ncreated by FLT Startcraft</string>
    <string name="about_close">CLOSE</string>

    <!-- UNITS -->
    <string name="units_meters" translatable="false">m²</string>
    <string name="units_square" translatable="false">sq ft</string>
    <string name="units_message_dimension">1 sq ft equals 0.092 m²</string>
    <string name="units_message_money">1 $ equals 0.812 €</string>
    <string name="units_title">UNITS TABLE</string>
    <string name="units_activated_message">ACTIVATED  : </string>

    <!-- LOAN SIMULATION -->
    <string name="loan_simulation_title">IN FINE Loan Simulator</string>
    <string name="loan_simulation_price">PRICE :</string>
    <string name="loan_simulation_rate">RATE :</string>
    <string name="loan_simulation_year">YEARS :</string>
    <string name="loan_simulation_contribution">CONTRIBUTION :</string>
    <string name="loan_simulation_result">RESULT</string>
    <string name="loan_simulation_percent" translatable="false">%</string>
    <string name="loan_simulation_dollar" translatable="false">$</string>
    <string name="loan_simulation_euro" translatable="false">€</string>
    <string name="loan_simulation_total_amount">Total amount</string>
    <string name="loan_simulation_each_month">/ each month</string>
    <string name="loan_simulation_each_month_land">Each month</string>

    <!-- Profile manager -->
    <string name="user_profile_title">User Profile</string>
    <string name="user_profile_detail_description">DESCRIPTION :</string>
    <string name="user_profile_detail_change">CHANGE DATAS</string>
    <string name="user_profile_detail_active_profile">SELECT PROFILE</string>
    <string name="user_profile_change_update">UPDATE</string>
    <string name="user_profile_new_user">New User…</string>
    <string name="user_profile_new_user_dialog">Please enter the name of this new user :</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_userName">USER NAME</string>
    <string name="nav_drawer_item_loan">Loan simulation</string>
    <string name="nav_drawer_item_units">Units</string>
    <string name="nav_drawer_item_profile">Profile manager</string>
    <string name="nav_drawer_item_apartment">Apartment manager</string>
    <string name="nav_drawer_item_help">Help</string>
    <string name="nav_drawer_item_about">About</string>
    <string name="nav_drawer_item_map">Map</string>

    <!-- toolbar titles -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="toolbar_appartment_description">Apartment Listing</string>
    <string name="toolbar_apartment_creation">Apartment Creation</string>
    <string name="toolbar_apartment_modification">Apartment Modification</string>

    <!-- photo viewpager -->
    <string name="photo_title_viewpager" translatable="false">PHOTO TITLE</string>
    <string name="photo_close_viewpager" translatable="false">X</string>

    <!-- Apartment creation -->
    <string name="fragment_creation_title">fill in the fields below :</string>
    <string name="fragment_creation_type">type</string>
    <string name="fragment_creation_adress">address</string>
    <string name="fragment_creation_postalcode">postal code</string>
    <string name="fragment_creation_town">town</string>
    <string name="fragment_creation_price">price</string>
    <string name="fragment_creation_button">CREATE</string>
    <string name="fragment_creation_notification_title">New Apartment creation warning</string>
    <string name="fragment_creation_notification_description">allow you to receive a notification for each apartment creation</string>
    <string name="fragment_creation_notification_content_title">New apartment created !</string>
    <string name="fragment_creation_notification_content_body_first">Your apartment : </string>
    <string name="fragment_creation_notification_content_body_second">" is created."</string>

    <!-- Apartment detail -->
    <string name="apartment_description">Description :</string>
    <string name="apartment_for_sale">For sale</string>
    <string name="apartment_sold">Sold</string>
    <string name="apartment_room">room(s)</string>
    <string name="METER" translatable="false">METER</string>
    <string name="FEET" translatable="false">FEET</string>
    <string name="apartment_inscription">Inscription :</string>
    <string name="apartment_title_date_sold">Date sold :</string>
    <string name="apartment_date_sold" translatable="false"> - </string>

    <!-- Apartment modifier -->
    <string name="fragment_modification_manager_title">MANAGER :</string>
    <string name="fragment_modification_button_title">CHANGE</string>
    <string name="fragment_modification_recycler_no_po">[+] point of interest</string>
    <string name="fragment_modification_recycler_no_picture">[+] picture</string>
    <string name="activity_photo_modifier_validate">VALIDATE</string>
    <string name="activity_photo_modifier_cancel">CANCEL</string>
    <string name="activity_photo_modifier_advertising_photo_name">This title for this photo already exists</string>
    <string name="activity_photo_modifier_advertising_empty_edittext">Photo must have a title</string>
    <string name="activity_user_modifier_title">LIST OF USERS</string>
    <string name="activity_user_modifier_postal_code_advertising">FIVE NUMBERS FOR A POSTAL CODE</string>

    <!-- TRANSFORMER APARTMENT ITEM -->
    <string name="apartment_title_type">TYPE :</string>
    <string name="apartment_title_description">DESCRIPTION :</string>
    <string name="apartment_title_square">SQUARE :</string>
    <string name="apartment_title_room">ROOMS :</string>
    <string name="apartment_title_po">POINTS OF INTEREST</string>
    <string name="apartment_title_po_single" translatable="false"> */ </string>
    <string name="apartment_title_picture_single" translatable="false"> -> </string>
    <string name="apartment_title_adress">ADDRESS</string>
    <string name="apartment_title_street">STREET :</string>
    <string name="apartment_title_postal_code">POSTAL CODE :</string>
    <string name="apartment_title_town">TOWN :</string>
    <string name="apartment_title_price">PRICE :</string>
    <string name="apartment_title_picture">PICTURES</string>
    <string name="apartment_title_contact">SOLD :</string>
    <string name="apartment_advertising">Wrong number format into your formulary</string>


</resources>
