<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apartmentcreator.CreateFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/fragment_creation_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_creation_title"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/fragment_creation_type_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/fragment_creation_type"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_creation_adress_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_creation_title_textview" />

        <EditText
            android:id="@+id/fragment_creation_adress_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/fragment_creation_adress"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_creation_postalcode_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_creation_type_editText" />

        <EditText
            android:id="@+id/fragment_creation_postalcode_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/fragment_creation_postalcode"
            android:textSize="12sp"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/fragment_creation_town_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_creation_adress_editText" />

        <EditText
            android:id="@+id/fragment_creation_town_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/fragment_creation_town"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_creation_price_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_creation_postalcode_editText" />

        <EditText
            android:id="@+id/fragment_creation_price_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/fragment_creation_price"
            android:textSize="12sp"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/fragment_creation_create_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_creation_town_editText" />

        <Button
            android:id="@+id/fragment_creation_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="30dp"
            android:text="@string/fragment_creation_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>