<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profilemanager.ProfileManagerDetailFragment"
    android:layout_gravity="center"
    android:background="@drawable/information_style">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/left_line_border"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:src="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/horizontal_line_border"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/information_panel_style"
            app:layout_constraintBottom_toTopOf="@+id/guideline_profile_detail_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/manager_detail_photo_user"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/bk_photo"
            app:layout_constraintBottom_toTopOf="@+id/manager_detail_name_user"
            app:layout_constraintEnd_toEndOf="@+id/horizontal_line_border"
            app:layout_constraintStart_toStartOf="@+id/horizontal_line_border"
            app:layout_constraintTop_toTopOf="@+id/horizontal_line_border" />

        <ImageView
            android:id="@+id/manager_detail_active_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@mipmap/baseline_group_black_24"
            app:layout_constraintEnd_toEndOf="@+id/horizontal_line_border"
            app:layout_constraintTop_toTopOf="@+id/horizontal_line_border" />

        <TextView
            android:id="@+id/manager_detail_name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_light"
            android:textSize="@dimen/size_high"
            android:text="@string/nav_header_userName"
            app:layout_constraintBottom_toTopOf="@+id/guideline_profile_detail_horizontal"
            app:layout_constraintEnd_toEndOf="@+id/horizontal_line_border"
            app:layout_constraintStart_toStartOf="@+id/horizontal_line_border" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/user_profile_detail_description"
            android:textSize="@dimen/size_high"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_profile_detail_horizontal" />

        <TextView
            android:id="@+id/manager_detail_description_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:textSize="@dimen/size_middle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/nav_drawer_item_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_profile_detail_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <Button
            android:id="@+id/manager_detail_button_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/user_profile_detail_change"
            android:padding="10dp"
            android:textSize="@dimen/size_middle"
            android:background="@drawable/rounded_button_style"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/manager_detail_button_active_profile"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/manager_detail_button_active_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/user_profile_detail_active_profile"
            android:textSize="@dimen/size_middle"
            android:padding="10dp"
            android:background="@drawable/rounded_button_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/manager_detail_button_change" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>